--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@clerk/nextjs": "^6.36.2",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "@uploadthing/react": "^7.3.3",
     "next": "16.0.10",
     "pg": "^8.16.3",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "uploadthing": "^7.7.4",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
