Mangler bare litt på admin siden og finpussing

--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "@prisma/extension-accelerate": "^3.0.1",
+    "@react-email/components": "^1.0.2",
+    "@react-email/render": "^2.0.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@uploadthing/react": "^7.3.3",
     "date-fns": "^4.1.0",
     "next": "16.0.10",
     "pg": "^8.16.3",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-markdown": "^10.1.0",
+    "resend": "^6.6.0",
     "uploadthing": "^7.7.4",
     "zod": "^4.2.1"
   },
