--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.2",
+    "@hookform/resolvers": "^5.2.2",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "@prisma/extension-accelerate": "^3.0.1",
@@ -22,8 +23,10 @@
     "pg": "^8.16.3",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-hook-form": "^7.69.0",
     "react-markdown": "^10.1.0",
     "resend": "^6.6.0",
+    "sonner": "^2.0.7",
     "uploadthing": "^7.7.4",
     "zod": "^4.2.1"
   },
