--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "@prisma/extension-accelerate": "^3.0.1",
+    "@prisma/management-api-sdk": "^1.3.0",
     "@react-email/components": "^1.0.2",
     "@react-email/render": "^2.0.0",
     "@tailwindcss/typography": "^0.5.19",
@@ -44,8 +45,5 @@
     "prisma": "^7.1.0",
     "tailwindcss": "^4",
     "typescript": "^5"
-  },
-  "prisma": {
-    "seed": "npx tsx prisma/seed.ts"
   }
 }
