--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@uploadthing/react": "^7.3.3",
     "date-fns": "^4.1.0",
     "next": "16.0.10",
+    "nextjs-toploader": "^3.9.17",
     "pg": "^8.16.3",
     "react": "19.2.1",
     "react-dom": "19.2.1",
