--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "next": "16.0.10",
     "nextjs-toploader": "^3.9.17",
     "pg": "^8.16.3",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.69.0",
     "react-markdown": "^10.1.0",
     "resend": "^6.6.0",
