--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build --webpack",
     "start": "next start",
     "lint": "eslint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "pwa:vapid": "node scripts/generate-vapid-keys.mjs"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.2",
