--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
         {
             "path": "/api/cron/generate-fees",
             "schedule": "0 0 1 * *"
+        },
+        {
+            "path": "/api/cron/invoice-deadlines",
+            "schedule": "0 9 * * *"
         }
     ]
 }
